apps/automation/base/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: automation
  namespace: automation
  labels:
    backstage.io/kubernetes-id: automation
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - automation.diegoluisi.eti.br
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: automation
        port:
          number: 8080
